# spark-dashboard

./: .dockerignore  .env.docker.example  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  release-please-config.json
.github/workflows/: ci.yml  docker-publish.yml  publish.yml  release-please.yml
deploy/: Dockerfile  docker-compose.yml  docker.md  install.sh
deploy/docker/: Dockerfile  docker-compose.bridge.yml  docker-compose.yml  docker.md
deploy/host/: config.env.example  install.sh
deploy/host/systemd/: spark-dashboard.service
dev/: README.md  demo-load.sh  deploy.sh  dev.sh  docker-dev.sh
dev/vllm-multi/: README.md  docker-compose.yml
dev/vllm-multi/nginx/: nginx.conf
docs/: docker.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: AnimatedCounter.test.tsx  ArcGauge.test.tsx  EngineCardSpecDecode.test.tsx  HBar.test.tsx  MemoryCard.test.tsx  TimeSeriesChart.test.tsx  ViewModeToggle.test.tsx  circular-buffer.test.ts  format.test.ts  gpuPower.test.ts  setup.test.ts  slo.test.ts  theme.test.ts  useSloSettings.test.ts
frontend/src/components/: ConnectionBadge.tsx  CpuCard.tsx  GpuCard.tsx  MemoryCard.tsx  MetricCard.tsx  MetricRow.tsx  StackedBar.tsx  SystemCard.tsx  ViewModeToggle.tsx
frontend/src/components/charts/: BigNumberSparkline.tsx  CoreHeatmap.tsx  EventMarker.tsx  RequestSpan.tsx  Sparkline.tsx  TimeSeriesChart.tsx  TimeWindowSelector.tsx
frontend/src/components/engines/: AnimatedCounter.tsx  EngineCard.tsx  EngineCardPrimitives.tsx  EngineSection.tsx  EngineTab.tsx  GlobalEngineCard.tsx  GlobalEngineTab.tsx  LatencyModeControl.tsx  SloSettingsControl.tsx  TabRotationControl.tsx
frontend/src/components/gauges/: ArcGauge.tsx  GaugeCard.tsx  HBar.tsx
frontend/src/components/views/: Dashboard.tsx  DetailedView.tsx  GlanceableView.tsx
frontend/src/hooks/: useElementSize.ts  useMetrics.ts  useMetricsHistory.ts  useSloSettings.ts  useTabRotation.ts  useViewMode.ts
frontend/src/lib/: circular-buffer.ts  engineAggregate.test.ts  engineAggregate.ts  format.ts  gpuPower.ts  providerLogo.test.ts  providerLogo.ts  slo.ts  theme.ts
frontend/src/types/: events.ts  metrics.ts
packaging/: install.sh
packaging/systemd/: spark-dashboard.service
src/: main.rs  server.rs  ws.rs
src/cli/: healthcheck.rs  mod.rs  service.rs
src/engines/: detector.rs  histogram.rs  mod.rs  prometheus.rs  vllm.rs  warmup.rs
src/metrics/: cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs  network.rs
