[package]
name = "spark-dashboard"
version = "0.1.0"
edition = "2021"
description = "Real-time hardware and LLM inference monitoring for the NVIDIA DGX Spark"
license = "MIT"
repository = "https://github.com/niklasfrick/spark-dashboard"
readme = "README.md"
keywords = ["monitoring", "gpu", "nvml", "dgx-spark", "vllm"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
sysinfo = "0.38"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "fs"] }
rust-embed = { version = "8", features = ["axum"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
mime_guess = "2"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
prometheus-parse = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
nvml-wrapper = "0.12"
procfs = "0.18"
bollard = "0.20"
